# rai

./: CMakeLists.txt  ME.md  README.md  flake.nix  result
src/Kin/: kin_physx.cpp
src/ry/: module.cpp
test/Core/yaml/: main.cpp
